# elfs-and-wizards

./: .clang-format  .gitignore  CMakeLists.txt
.zed/: debug.json  tasks.json
assets/: mesh.frag  mesh.vert  test.comp  test.frag  test.vert  test_old.frag
src/: colors.hpp  main.cpp
